--- a/src/task-01.html
+++ b/src/task-01.html
@@ -45,7 +45,7 @@
         </ul>
       </li>
     </ul>
-    <p><a href="index.html">На главную</a></p>
-    <script src="js/task-01.js" type="module"></script>
+    <p><a href="../index.html">На главную</a></p>
+    <script src="./js/task-01.js" type="module"></script>
   </body>
 </html>
