--- a/src/task-02.html
+++ b/src/task-02.html
@@ -19,7 +19,7 @@
 
     <ul id="ingredients"></ul>
 
-    <p><a href="index.html">На главную</a></p>
-    <script src="js/task-02.js" type="module"></script>
+    <p><a href="../index.html">На главную</a></p>
+    <script src="./js/task-02.js" type="module"></script>
   </body>
 </html>
