--- a/src/task-03.html
+++ b/src/task-03.html
@@ -19,7 +19,7 @@
 
     <ul id="gallery"></ul>
     
-    <p><a href="index.html">На главную</a></p>
-    <script src="js/task-03.js" type="module"></script>
+    <p><a href="../index.html">На главную</a></p>
+    <script src="./js/task-03.js" type="module"></script>
   </body>
 </html>
