--- a/src/task-04.html
+++ b/src/task-04.html
@@ -23,7 +23,7 @@
       <button type="button" data-action="increment">+1</button>
     </div>
 
-    <p><a href="index.html">На главную</a></p>
-    <script src="js/task-04.js" type="module"></script>
+    <p><a href="../index.html">На главную</a></p>
+    <script src="./js/task-04.js" type="module"></script>
   </body>
 </html>
