--- a/src/task-07.html
+++ b/src/task-07.html
@@ -21,7 +21,7 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <p><a href="index.html">На главную</a></p>
-    <script src="js/task-07.js" type="module"></script>
+    <p><a href="../index.html">На главную</a></p>
+    <script src="./js/task-07.js" type="module"></script>
   </body>
 </html>
